# gas-steady-state

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE.md  docker-compose.yml  input_checking.rtf
cmake/: FindGRAVITY.cmake  FindIPOPT.cmake
data/: .gitkeep  ihs_2.json  model30ss.json  model6ss_test_0.json  model6ss_test_0_dis_1.json  model6ss_test_1.json  model6ss_test_1_outage_n3.json  model6ss_test_1_outage_p4.json  setup_parser.py
data/csv-to-json-converter/: convert.py  data.py
data/ihs_2/: input_network.txt
data/model30/: input_param.csv  model30_1.json  model30_10.json  model30_2.json  model30_3.json  model30_4.json  model30_5.json  model30_6.json  model30_7.json  model30_8.json  model30_9.json
data/model30ss_csv_si/: input_int_cd.csv  input_int_cs.csv  input_int_cslack.csv  input_int_dmax.csv  input_int_gbar.csv  input_int_pslack.csv  input_int_smax.csv  input_network_comps.csv  input_network_gnodes.csv  input_network_nodes.csv  input_network_pipes.csv  input_param.csv  output_ss_nodal_pressure.csv  output_ss_non_slack_flows.csv  output_ss_pipe_flow_out.csv  output_ss_pipe_pressure_in.csv  output_ss_pipe_pressure_out.csv  print_log_tr.txt
data/model6/: model6_1.json  model6_10.json  model6_2.json  model6_3.json  model6_4.json  model6_5.json  model6_6.json  model6_7.json  model6_8.json  model6_9.json
data/model6ss-test/: input_int_qbar.csv  input_network.txt  (+27 more)
include/: components.h  compressor.h  constraint.h  conversions.h  converter.h  data.h  filenames.h  files.h  func.h  gnode.h  input_params.h  ipopt_problem.h  junction.h  model.h  model_data.h  network.h  nondimensionalization.h  pipe.h  problem.h  problem_data.h  solution.h  steady_state_data.h  steady_state_problem.h  steady_state_solution.h  term.h  term_type.h  utils.h  variable.h
output/: model6_0_output.json  model6_10_output.json  model6_1_output.json  model6_2_output.json  model6_3_output.json  model6_4_output.json  model6_5_output.json  model6_6_output.json  model6_7_output.json  model6_8_output.json  model6_9_output.json  model6ss_test_0_output.json  model6ss_test_1_output.json
src/: CMakeLists.txt  components.cpp  compressor.cpp  constraint.cpp  conversions.cpp  converter.cpp  data.cpp  filenames.cpp  files.cpp  func.cpp  gnode.cpp  input_params.cpp  ipopt_problem.cpp  junction.cpp  main.cpp  model.cpp  model_data.cpp  network.cpp  nondimensionalization.cpp  pipe.cpp  problem.cpp  problem_data.cpp  solution.cpp  steady_state_data.cpp  steady_state_problem.cpp  steady_state_solution.cpp  term.cpp  utils.cpp  variable.cpp
(+137 files in other folders)
